# OC_P7_POC_RAG

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_UML.md  Dockerfile  Makefile  RAPPORT_TECHNIQUE.md  README.md  docker-compose.yml  main.py  openagenda_fetch.py  pyproject.toml  query_classifier.py  utils.py
app/: main.py
app/core/: classification.py  config.py  embeddings.py  index_manager.py  prompts.py  security.py
app/routes/: health.py  query.py  rebuild.py
app/services/: __init__.py  rag_service.py
app/utils/: document_converter.py
notebooks/: playground.ipynb
scripts/: ragas_eval.py
tests/: __init__.py  conftest.py
tests/core/: test_embeddings.py
tests/routes/: test_health_rebuild_endpoints.py  test_query_endpoint.py
tests/services/: test_rag_service.py
tests/utils/: test_classification.py  test_document_converter.py  test_index_manager.py
