[tool.black]
line-length = 120
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 120

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]

[project]
name = "oc-p7-poc-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.11.0",
    "bs4>=0.0.2",
    "coverage>=7.12.0",
    "faiss-cpu>=1.13.0",
    "fastapi>=0.121.2",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "langchain>=1.0.7",
    "langchain-classic>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.0.1",
    "langchain-mistralai>=1.0.1",
    "langchain-text-splitters>=1.0.0",
    "mistralai>=1.9.11",
    "numpy>=2.3.5",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.1",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.1.2",
    "uvicorn>=0.38.0",
]
